--- a/Kiwi/res/values/strings.xml
+++ b/Kiwi/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, main!</string>
+    <string name="hello">Kiwi Converter</string>
     <string name="app_name">KiwiApp</string>
+<string name="ist">ist</string>
+
 </resources>
