--- a/Kiwi/res/values/strings.xml
+++ b/Kiwi/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="app_name">KiwiApp</string>
 <string name="ist">ist</string>
 
+<string name="kiwi_appwidget_info">KiwiConverterWidget</string>
 </resources>
